Preloader: Outro animation and pause added.

--- a/dev/assets/_modules/header-nav.pug
+++ b/dev/assets/_modules/header-nav.pug
@@ -1,9 +1,9 @@
 header#header-nav.snj-container-fluid
 	.header-wrapper.snj-col-12
-		a.logo-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
+		a.logo-wrapper.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
 			+logo-jb
 		include ../_modules/side-nav.pug
 		include ../_modules/nav-menu.pug
 
-		a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
+		a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
 			span.line-link About us
