--- a/dev/assets/_modules/side-nav.pug
+++ b/dev/assets/_modules/side-nav.pug
@@ -1,19 +1,19 @@
 #side-nav
 	.row
 		.menu-wrapper.offset-2.snj-col-7
-			a.menu-item.sidenav-elems(href="about.html")
+			a.page_transitioner.menu-item.sidenav-elems(href="about.html")
 				h2.item-title About Us
 				p.item-intro Know us a little more.
-			a.menu-item.sidenav-elems(href="contact.html")
+			a.page_transitioner.menu-item.sidenav-elems(href="contact.html")
 				h2.item-title Contact Us
 				p.item-intro Drop us a line.
 
 			.menu-item.social-item.sidenav-elems
 				p.item-intro Or check our social stuff
 				.social-wrapper
-					a.social-link(href="https://www.linkedin.com/company/jungle-beige")
+					a.social-link(href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
 						+link-icon
-					a.social-link(href="")
+					a.social-link(href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 						+tw-icon
-					a.social-link(href="https://www.instagram.com/junglebeige/")
+					a.social-link(href="https://www.instagram.com/junglebeige/" target="_blank" rel="nofollow noopener noreferrer")
 						+ins-icon
