--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -6,7 +6,7 @@ block content
 		//- .snj-row
 		.row
 			.center-wrapper
-				a.about-block.offset-1.snj-col-10.offset-md-2.snj-col-md-5(href="message.html")
+				a.page_transitioner.about-block.offset-1.snj-col-10.offset-md-2.snj-col-md-5(href="message.html")
 					h2.subtitle-block.sub-1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Get in touch
 
 					h2.subtitle-block.sub-2.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Contact Us
@@ -28,13 +28,13 @@ block content
 						.line.jb-cascade(data-cascade="line-full-height" data-cascade-delay-mobile="3" data-cascade-delay="1")
 					ul
 						li.jb-cascade(data-cascade="fade-right")
-							a(href="https://www.instagram.com/junglebeige/") Instagram
+							a(href="https://www.instagram.com/junglebeige/" target="_blank" rel="nofollow noopener noreferrer") Instagram
 						li.jb-cascade(data-cascade="fade-right")
-							a(href="#") Facebook
+							a(href="https://www.facebook.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer") Facebook
 						li.jb-cascade(data-cascade="fade-right")
-							a(href="#") Twitter
+							a(href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer") Twitter
 						li.jb-cascade(data-cascade="fade-right")
-							a(href="https://www.linkedin.com/company/jungle-beige") Linkedin
+							a(href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer") Linkedin
 
 				aside.info-block-wrapper.snj-col-4.offset-2.snj-col-md-9.offset-md-1
 					.info-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2")
@@ -47,7 +47,7 @@ block content
 					.info-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4")
 						p © Copyright 2020
 
-	a.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
