--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -43,7 +43,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.more-cases.prev-case(href="project-manage-coffee.html")
+					a.page_transitioner.more-cases.prev-case(href="project-manage-coffee.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -52,15 +52,15 @@ block content
 					p Next Project
 					h3 Amongst Few
 					h4 Event Curation
-					a(href="project-event-amongst.html") See case
+					a.page_transitioner(href="project-event-amongst.html") See case
 					p.copyright © Copyright 2019
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.more-cases.next-case(href="project-event-amongst.html")
+					a.page_transitioner.more-cases.next-case(href="project-event-amongst.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.navigation-btn.btn-pages(href="workevent.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="workevent.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
