--- a/dev/assets/workcommerce.pug
+++ b/dev/assets/workcommerce.pug
@@ -5,7 +5,7 @@ block content
 	.worksections-bg
 	.sections-p-wrapper.project-bg-commerce-amongst.full-screen
 		+project-sections("E-commerce", "Amongst Few", "01", "project-commerce-amongst.html")
-	a.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
