--- a/dev/assets/_modules/project-sections.pug
+++ b/dev/assets/_modules/project-sections.pug
@@ -7,7 +7,7 @@ mixin project-sections(subtitle, title, number, linkTo)
 				h1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3") #{title}
 			span.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") #{number}
 
-		a.arrow-container.jb-cascade(data-cascade="fade-right" data-cascade-delay-mobile="3" data-cascade-delay="3" href=linkTo)
+		a.page_transitioner.arrow-container.jb-cascade(data-cascade="fade-right" data-cascade-delay-mobile="3" data-cascade-delay="3" href=linkTo)
 			.arrow-right
 				.arrow-wrapper
 					.rectangle-arrow
