--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -16,7 +16,7 @@ block content
 					+project-intro("workcommerce.html","05","E-commerce","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
 	
 
-	a.navigation-btn.btn-pages(href="index.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="index.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+close-icon
 
