--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -41,7 +41,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.more-cases.prev-case(href="project-commerce-amongst.html")
+					a.page_transitioner.more-cases.prev-case(href="project-commerce-amongst.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -50,16 +50,16 @@ block content
 					p Next Project
 					h3 Future Street Cred
 					h4 Branding & Design
-					a(href="project-brand-cred.html") See case
+					a.page_transitioner(href="project-brand-cred.html") See case
 					p.copyright © Copyright 2019
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.more-cases.next-case(href="project-brand-cred.html")
+					a.page_transitioner.more-cases.next-case(href="project-brand-cred.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
 				//- p.copyright © Copyright 2019
-	a.navigation-btn.btn-pages(href="workbranding.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="workbranding.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
