--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -46,7 +46,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.more-cases.prev-case(href="project-social-suede.html")
+					a.page_transitioner.more-cases.prev-case(href="project-social-suede.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -55,15 +55,15 @@ block content
 					p Next Project
 					h3 Puma
 					h4 Content Creation & Management
-					a(href="project-manage-puma.html") See case
+					a.page_transitioner(href="project-manage-puma.html") See case
 					p.copyright © Copyright 2019
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.more-cases.next-case(href="project-manage-puma.html")
+					a.page_transitioner.more-cases.next-case(href="project-manage-puma.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.navigation-btn.btn-pages(href="workstrategy.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="workstrategy.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
