--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -23,7 +23,7 @@ block content
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrillas
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives that authentically embodied the campaign’s ethos.
-						p It was the first long-term micro-influencer campaign to exist in the region, and produced and unprecedented amount of original content and activations - a sort of millennial interpretation of running the streets. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, </a (href="")>suedeguerrillas.com</a>, which we also designed.
+						p It was the first long-term micro-influencer campaign to exist in the region, and produced and unprecedented amount of original content and activations - a sort of millennial interpretation of running the streets. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, <a href="https://suedeguerrillas.com" target="_blank" rel="nofollow noopener noreferrer">suedeguerrillas.com</a>, which we also designed.
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p We’re especially proud of the platform because it offers the type of big brand exposure that creatives in cities outside of Dubai can hardly attain, or fathom.
 						p Now an entire region of creatives have a way to continually share ideas and work with PUMA. It’s already led to dozens of co-creations and will continue to do so while the site is live. It’s the type of access and opportunity our younger selves dreamed of, and we’re proud to pay it forward to this generation and beyond.
@@ -43,7 +43,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.more-cases.prev-case(href="project-brand-cred.html")
+					a.page_transitioner.more-cases.prev-case(href="project-brand-cred.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -52,15 +52,15 @@ block content
 					p Next Project
 					h3 Power Horse
 					h4 Campaign & Social Media Strategy
-					a(href="project-social-power.html") See case
+					a.page_transitioner(href="project-social-power.html") See case
 					p.copyright © Copyright 2019
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.more-cases.next-case(href="project-social-power.html")
+					a.page_transitioner.more-cases.next-case(href="project-social-power.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.navigation-btn.btn-pages(href="workstrategy.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="workstrategy.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
