--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -8,13 +8,13 @@ block content
 				h2.title-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2") Thanks.
 				p.subtitle-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3") We’ll get back to you as soon we possibly can. Meanwhile check our stuff.
 				.social-wrapper
-					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3" href=linkedin)
+					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3" href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
 							+link-icon
-					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4" href=tw)
+					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4" href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 							+tw-icon
-					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5" href=ig)
+					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5" href="https://instagram.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 							+ins-icon
-			a.navigation-btn.btn-pages(href="ourwork.html")
+			a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 				span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
