--- a/dev/assets/workbranding.pug
+++ b/dev/assets/workbranding.pug
@@ -10,7 +10,7 @@ block content
 	.sections-p-wrapper.project-bg-cred
 		+project-sections("Branding & Design", "Future Street Cred", "02", "project-brand-cred.html")
 
-	a.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
