--- a/dev/assets/workevent.pug
+++ b/dev/assets/workevent.pug
@@ -8,7 +8,7 @@ block content
 		+project-sections("Event Curation", "Puma Middle East", "01", "project-event-puma.html")
 	.sections-p-wrapper.project-bg-event-amongst
 		+project-sections("Event Curation", "Amongst Few", "02", "project-event-amongst.html")
-	a.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
