--- a/dev/assets/workmanagement.pug
+++ b/dev/assets/workmanagement.pug
@@ -8,7 +8,7 @@ block content
 		+project-sections(" Content creation & Management", "Puma", "01", "project-manage-puma.html")
 	.sections-p-wrapper.project-bg-coffee
 		+project-sections(" Content creation & Management", "Cartel Coffee", "02", "project-manage-coffee.html")
-	a.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
