--- a/dev/assets/workstrategy.pug
+++ b/dev/assets/workstrategy.pug
@@ -8,7 +8,7 @@ block content
 		+project-sections("Campaign & Social Media Strategy ", "Suede Guerrillas ", "01", "project-social-suede.html")
 	.sections-p-wrapper.project-bg-power
 		+project-sections("Campaign & Social Media Strategy ", "Power Horse", "02", "project-social-power.html")
-	a.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
