Shaders: Implementing new library; wip in home, not ready yet.

--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -2,7 +2,9 @@ extends _templates/layout.pug
 
 block content
 	.index-wrapper
-		.background-wrapper.home-bg
+		.background-wrapper.home-bg.shader-container
+			img.shader-img(src="img/Desert_Still_opt.jpg", alt="Man running on desert distortioned background")
+
 
 		//- mobile display
 		.display-wrapper
