--- a/dev/scss/views/_home.scss
+++ b/dev/scss/views/_home.scss
@@ -5,8 +5,8 @@
 
 // shader wrapper
 .home-bg{
-	background-size: cover;
-	background-image: url("../img/Desert_opt.jpg");
+	// background-size: cover;
+	// background-image: url("../img/Desert_opt.jpg");
 }
 
 // Display WE
