--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -82,8 +82,8 @@ html(class='no-js')
 
 		//- scripts
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js")
-		script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js')
-		script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js')
+		//- script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js')
+		//- script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js')
 		script(src='js/app.js')
 		script.
 			var homeSlider = new heroSlider();
