Shader implementation: Home and About ready, responsive behavior pending, our work & our work sections pending.

--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -20,6 +20,19 @@
 	background-repeat: no-repeat;
 	z-index: -1;
 	background-size: cover;
+
+	.shader-img{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		@include translate(-50%, -50%);
+		min-width: 100%;
+		min-height: 100%;
+
+		@media (min-width: 768px){
+			display: none;
+		}
+	}
 }
 
 .about-wrapper{
