--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -5,7 +5,8 @@ block content
 	.about-section.snj-container-fluid.flex-column
 		.row
 			//- background shader wrapper
-			.background-wrapper.about-bg
+			.background-wrapper.about-bg.shader-container
+				img.shader-img(src="img/about_shader_bg_opt.png", alt="Night city background")
 
 			.about-wrapper
 				//- Slider Controller
