Shader implementing: Used special backgrounds to improve mobile experience, removed img html element because its already used in js; sections tweaked were home, ourwork and sub ourwork.

--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -5,7 +5,9 @@ block content
 	.ourwork.snj-container-fluid
 		.row
 			//- background shader wrapper
-			.background-wrapper.work-bg
+			.background-wrapper.work-bg.shader-container
+				img.shader-img(src="img/ourwork_shader_bg_opt.png", alt="Person standing distortioned by shader")
+
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-9.offset-md-2
 				.wrap-list
