--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -8,6 +8,13 @@ block content
 			.background-wrapper.work-bg.shader-container
 				img.shader-img(src="img/ourwork_shader_bg_opt.png", alt="Person standing distortioned by shader")
 
+				.shifting-imgs-container
+					#shifting-bg-1.shifting-bg
+					#shifting-bg-2.shifting-bg
+					#shifting-bg-3.shifting-bg
+					#shifting-bg-4.shifting-bg
+					#shifting-bg-5.shifting-bg
+
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-9.offset-md-2
 				.wrap-list
