--- a/dev/scss/views/_ourwork.scss
+++ b/dev/scss/views/_ourwork.scss
@@ -24,6 +24,38 @@
 	.shader-img{
 		display: none;
 	}
+
+	.shifting-imgs-container{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+
+		.shifting-bg{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-size: cover;
+			background-position: center;
+			opacity: 0;
+			transition: opacity 0s cubic-bezier(.21,0,0,1) 0.5s, transform 0s cubic-bezier(.21,0,0,1) 0.5s;
+
+			&#shifting-bg-1{background-image: url('../img/ourwork_bg_1_opt.jpg');}
+			&#shifting-bg-2{background-image: url('../img/ourwork_bg_2_opt.jpg');}
+			&#shifting-bg-3{background-image: url('../img/ourwork_bg_3_opt.jpg');}
+			&#shifting-bg-4{background-image: url('../img/ourwork_bg_4_opt.jpg');}
+			&#shifting-bg-5{background-image: url('../img/ourwork_bg_5_opt.jpg');}
+
+
+			&.show{
+				z-index: 1;
+				transition: opacity 0.5s cubic-bezier(.21,0,0,1), transform 0.5s cubic-bezier(.21,0,0,1) 0s;
+				opacity: 1;
+				@include scale(1.1,1.1);
+			}
+		}
+	}
 }
 
 .works-list{
