Our work UX: Shifting titles shader transitions enabled, tweaking values to achieve demotion feel.

--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -7,9 +7,13 @@ block content
 			//- background shader wrapper
 			.background-wrapper.work-bg.shader-container
 				img.shader-img(src="img/ourwork_shader_bg_opt.png", alt="Person standing distortioned by shader")
+				img.shader-img(src="img/about_shader_bg_opt.png", alt="Person standing distortioned by shader")
+				img.shader-img(src="img/ourwork_shader_bg_opt.png", alt="Person standing distortioned by shader")
+				img.shader-img(src="img/about_shader_bg_opt.png", alt="Person standing distortioned by shader")
+				img.shader-img(src="img/ourwork_shader_bg_opt.png", alt="Person standing distortioned by shader")
 
 				.shifting-imgs-container
-					#shifting-bg-1.shifting-bg
+					#shifting-bg-1.shifting-bg.show
 					#shifting-bg-2.shifting-bg
 					#shifting-bg-3.shifting-bg
 					#shifting-bg-4.shifting-bg
