--- a/dev/scss/views/_ourwork.scss
+++ b/dev/scss/views/_ourwork.scss
@@ -41,7 +41,7 @@
 			opacity: 0;
 			transition: opacity 0s cubic-bezier(.21,0,0,1) 0.5s, transform 0s cubic-bezier(.21,0,0,1) 0.5s;
 
-			&#shifting-bg-1{background-image: url('../img/ourwork_bg_1_opt.jpg');}
+			&#shifting-bg-1{background-image: url('../img/ourwork_bg_desk_opt.jpg');}
 			&#shifting-bg-2{background-image: url('../img/ourwork_bg_2_opt.jpg');}
 			&#shifting-bg-3{background-image: url('../img/ourwork_bg_3_opt.jpg');}
 			&#shifting-bg-4{background-image: url('../img/ourwork_bg_4_opt.jpg');}
