Our work shader transition ready; shifting titles mobile behavior improved. Projects slider js naming & implementation improved.

--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -13,7 +13,7 @@ block content
 				img.shader-img(src="img/ourwork_shader_bg_opt.png", alt="Person standing distortioned by shader")
 
 				.shifting-imgs-container
-					#shifting-bg-1.shifting-bg.show
+					#shifting-bg-1.shifting-bg
 					#shifting-bg-2.shifting-bg
 					#shifting-bg-3.shifting-bg
 					#shifting-bg-4.shifting-bg
