--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -553,7 +553,7 @@ section.video-wrapper{
 				}
 
 				.bar{
-					background-color: $orange;
+					background-color: $cream;
 					height: 100%;
 					width: 100%;
 					border-radius: 2px;
