Amongst ecommerce project: Images updated.

--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -29,7 +29,7 @@ block content
 			
 
 			.p-photo1
-				img(src="https://www.fillmurray.com/1920/787", alt="")
+				img(src="./img/projects/commerce-amongst/2-commerce-amongst-photo.jpg", alt="")
 			.img-wrapper
 				.p-photo3
 					img(src="./img/projects/commerce-amongst/3-commerce-amongst-photo.jpg", alt="")
