--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -806,8 +806,7 @@ section.footer-project{
 }
 // e-commerce falta
 .project-bg-commerce-amongst{
-	// background-image: url("../img/project_2_bg.jpg");
-	background-image: url("https://www.fillmurray.com/1920/1080");
+	background-image: url("../img/projects/commerce-amongst/1-commerce-amongst-photo.jpg");
 }
 
 // Background hero image
