Copy and twitter updates by BJ done.

--- a/dev/assets/_modules/slide-about.pug
+++ b/dev/assets/_modules/slide-about.pug
@@ -2,7 +2,7 @@
 .about-component
 	section.header-about.snj-col-9.offset-1.offset-md-3.snj-col-md-8.snj-col-lg-3.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0")
 		h1.title-block.display-text Founded by brand creators
-		h2.subtitle-block.display-text Our Moto
+		h2.subtitle-block.display-text Our DNA
 
 
 	section.about-info.snj-col-8.offset-1.snj-col-md-6.offset-md-3.snj-col-lg-3.offset-lg-1
@@ -20,7 +20,6 @@
 		.social-wrapper
 			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
 				+link-icon
-			a.social-link.jb-cascade(data-cascade="fade-up" href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
-				+tw-icon
+
 			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.instagram.com/junglebeige/" target="_blank" rel="nofollow noopener noreferrer")
 				+ins-icon
