--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -31,7 +31,7 @@ block content
 							a(href="https://www.instagram.com/junglebeige/" target="_blank" rel="nofollow noopener noreferrer") Instagram
 						li.jb-cascade(data-cascade="fade-right")
 							a(href="https://www.facebook.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer") Facebook
-						li.jb-cascade(data-cascade="fade-right")
+						//- li.jb-cascade(data-cascade="fade-right")
 							a(href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer") Twitter
 						li.jb-cascade(data-cascade="fade-right")
 							a(href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer") Linkedin
