--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -11,7 +11,7 @@ block content
 					aside.especifications
 						.snj-row
 							div.especific-item.snj-col-md-2
-								+project-box("Client", "Puma")
+								+project-box("Client", "PUMA")
 							div.especific-item.offset-md-2.snj-col-md-4
 								+project-box("Project", "Suede Guerrillas",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
