--- a/dev/assets/workmanagement.pug
+++ b/dev/assets/workmanagement.pug
@@ -7,7 +7,7 @@ block content
 
 			
 	.sections-p-wrapper.project-bg-puma
-		+project-sections(" Content creation & Management", "Puma", "01", "project-manage-puma.html")
+		+project-sections(" Content creation & Management", "PUMA", "01", "project-manage-puma.html")
 	.sections-p-wrapper.project-bg-coffee
 		+project-sections(" Content creation & Management", "Cartel Coffee", "02", "project-manage-coffee.html")
 	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
