--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -47,7 +47,7 @@ block content
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Suede Guerrilla
+					h3 Suede Guerrillas
 					h4 Campaign & Social Media Strategy
 					a.page_transitioner(href="project-social-suede.html") See case
 					p.copyright © Copyright 2019
