--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -5,7 +5,7 @@ block content
 	.snj-container-fluid.project-page#event-puma-project
 		.row
 			section.project-about.project-bg-event-puma
-				+hero-project("Event Curation","Puma","01")
+				+hero-project("Event Curation","PUMA","01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
 						.snj-row
