--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -50,7 +50,7 @@ block content
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Puma
+					h3 PUMA
 					h4 Event Curation
 					a.page_transitioner(href="project-event-puma.html") See case
 					p.copyright © Copyright 2019
