--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -6,7 +6,7 @@ block content
 		.row
 			section.project-about.project-bg-puma
 				//- .background-wrapper.p-about-bg
-				+hero-project("Content Creation & Management","Puma", "01")
+				+hero-project("Content Creation & Management","PUMA", "01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
 						.snj-row
