--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -53,7 +53,7 @@ block content
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Puma
+					h3 PUMA
 					h4 Content Creation & Management
 					a.page_transitioner(href="project-manage-puma.html") See case
 					p.copyright © Copyright 2019
