Slider spacing tweaked. Video constructor edited to enable multiple videos per project; PUMA event first experiment.

--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -56,9 +56,18 @@ block content
 				},
 			])
 
+
+
+
 			//- video
-			section.video-wrapper.eventPuma-video-mini.snj-col-12
+			section#projectVideo01.video-wrapper.eventPuma-video-mini.snj-col-12
 				+video-player("./img/projects/event-puma/09_puma_event_mini.jpg","./img/projects/event-puma/09_puma_event.mp4")
+
+			section#projectVideo02.video-wrapper.eventPuma-video-mini2.snj-col-12
+				+video-player("./img/projects/event-puma/womens_day_mini-2.jpg","./img/projects/event-puma/Womens_Day_PUMA.mp4")
+
+
+
 
 			//- footer
 			section.footer-project
