--- a/dev/assets/_modules/video.pug
+++ b/dev/assets/_modules/video.pug
@@ -1,26 +1,27 @@
 mixin video-player(thumbnail, video)
-	button#open-video-btn.btn-circle.play-btn.circle-border-btn
+	button.open-video-btn.btn-circle.play-btn.circle-border-btn
 		.btn-c-init
 		+video-play-icon
 		.btn-c-hover
 		span Play
-	.video-overlay#videoContainer
-		video#projectVideo(poster=thumbnail)
+
+	.video-overlay.videoContainer
+		video.projectVideo(poster=thumbnail)
 			source(src=video type="video/mp4")
 		//- button.btn-circle.pause-video.circle-border-btn
 		//- 	.btn-c-init
 		//- 	+video-pause-icon
 
-		button#close-video-btn.btn-circle.close-video
+		button.close-video-btn.btn-circle.close-video
 			+video-exit-icon
 			span.bg-btn
 
 		.timeline-controller.snj-container-fluid
 			.time-init.snj-col-3.snj-col-md-1
-				span#currentSecondsContainer.time-control 00.00
+				span.currentSecondsContainer.time-control 00.00
 				span.time-control.time-mobile /
 				span.time-control.time-mobile.videoDurationContainer 00.00
 			.progress-bar-wrapper.snj-col-9.snj-col-md-10
-				#progressNav.progress-bar
-					#updatingBar.bar
+				.progressNav.progress-bar
+					.updatingBar.bar
 			span.time-control.time-end.snj-col-md-1.videoDurationContainer 00.00
