--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -480,16 +480,19 @@ section.video-wrapper{
 		}
 	}
 	.timeline-controller{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		position: absolute;
-		bottom: getvwmob(20vw);
-		width: 100%;
+		display: none;
+
+		// bottom: getvwmob(20vw);
+
 		@media(min-width: 768px){
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			position: absolute;
+			width: 100%;
 			bottom: 40px;
 			padding: 0 20px;
-			max-width: 100%;
+			// max-width: 100%;
 		}
 		@media(min-width: 992px){
 			padding: 0;
